# P4LMv4

./: .gitignore  AGENTS.md  Taskfile.yml  discussion.md  extract_plasma_lumos_1h.py  extract_plasma_lumos_1h_test.py  homo.py  lrope.md  mp.py  mypy.ini  pyproject.toml  temp.py  test.py  test_extract.py  train_demo.py  write.py
.github/workflows/: lint.yml  test.yml  typecheck.yml
src/main/: extraction.py  training.py
src/main/run/: __init__.py  run_extraction_deeplc_esm1b_all.py  run_extraction_deeplc_esm2_all.py  run_training_rope_learnable_attnpool.py  run_training_sinusoidal_compare.py  run_training_test_basic.py
src/main/utils/: manager.py
src/modules/container/: hdf5_container.py  hdf5_io.py  hdf5_storage.py  sequence_container.py  serializable_container.py  serializable_container_list.py  serializable_object.py  serializable_storage.py  serializable_storage_list.py
src/modules/data_process/: aggregator.py  data_process.py  data_process_list.py  initializer.py  rope_positional_encoder.py  sinusoidal_positional_encoder.py
src/modules/dataloader/: aggregator.py  dataloader.py
src/modules/dir/: dir.py
src/modules/helper/: helper.py
src/modules/manager/: manager.py
src/modules/model/: basic.py  model.py
src/modules/protein/: protein.py  protein_list.py  protein_types.py
src/modules/runner/: runner.py
src/modules/services/: __init__.py  platform.py  slack_service.py
src/modules/train/: criterion.py  loaded_train_result.py  recorder.py  train_result.py  trainer.py
src/modules/visualize/: visualizer.py
src/tests/main/: test_training_main.py  (+1 more)
(+174 files in other folders)
